--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 
 }
 
