--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
     justify-content: space-around;
     align-items: center;
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+    
 
 }
 
@@ -88,11 +89,12 @@ main{
     height: 500px;
     align-items: center;
     background-image: url("img/dot-dot-wave-shape.svg");
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
     margin-top: 70px;
     padding-bottom: 150px;
-    margin-bottom: 50px;
+
 }
 
 
