--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ main{
     display: flex;
     gap:20px;
     margin-left: 5px;
+   
 
 }
 
@@ -171,10 +172,11 @@ main{
     font-size: 16px;
 }
 
-.guarantee ul li img{
+.fa-circle-arrow-right{
 
-    width: 16px;
-    height: 16px;
+    font-size: 16px;
+    color:#0B316F;
+    margin-right: 5px;
 }
 
 
