--- a/style.css
+++ b/style.css
@@ -363,18 +363,32 @@ main{
     background-color:var(--icon-blue);
     border-radius: 3rem;
     opacity: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card .icon i{
+
+    color: var(--bs-dark);
+    font-size: 30px;
+    
 }
 
 .card:nth-of-type(2) .icon{
 
     background-color: var(--icon-red);
+
     
 }
 
 .card:nth-of-type(3) .icon{
 
     background-color: var(--icon-green);
+  
 }
+
+
 
 .card span{
 
@@ -399,6 +413,14 @@ main{
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 100px;
+    margin-top: 100px;
+    background-image: url('img/image-1.svg'), url('img/image-3.svg'), url('img/image-2.svg');
+    background-position: right top, left top, bottom center;
+    background-repeat: no-repeat;
+    
+    
+   
+    
     
 }
 
@@ -437,6 +459,9 @@ main{
     background-color:var(--icon-blue);
     border-radius: 3rem;
     opacity: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -448,7 +473,16 @@ main{
     background-color: var(--icon-red);
     border-radius: 3rem;
     opacity: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
+}
+
+.contact-columns .contact-icon i{
+
+    color: var(--bs-dark);
+    font-size: 20px;
 }
 
 /* CONTACT */ /* CONTACT INFO */
@@ -579,8 +613,116 @@ main{
 /* FOOTER */
 
 footer{
-    background-image: url(img/dot-dot-wave-shape.svg) no-repeat center top;
-    background: var(--bs-dark);
-    height: 100px;
+    
+    height: auto;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+    background-image: url(img/dot-dot-wave-shape.svg);
+    
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+footer .columns{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /*background-color: var(--white);*/
+}
+
+
+
+footer .columns:nth-of-type(1) p{
+
+        width: 400px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        color: #575757;
+
+}
+footer .columns:nth-of-type(1) .form-subscribe{
+
+    margin: 10px 0px 10px 0px;
+}
+footer .columns:nth-of-type(1) input{
+
+    width: 220px;
+    height: 50px;
+    border: 2px solid var(--br-input);
+    border-radius: 5px;
+    font-family: Poppins;
+    margin-right: 10px;
+}
+
+footer .columns:nth-of-type(1) button{
+
+    background-color: var(--btn-bg);
+    color:white;
+    padding: 16px 30px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+footer .columns:nth-of-type(1) p.stars{
+
+    color: var(--bs-warning);
+}
+
+footer .columns h3{
+
+    color: var(--bs-dark);
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+footer .columns ul li{
+
+    padding: 5px 0px 5px 0px;
+}
+
+
+footer .columns ul li a{
+
+    color: #575757;
+    font-size: 16px;
+    font-weight: 400;
+    
+}
+
+footer .copyright-social-media{
+
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--bs-dark);
+    padding: 20px 0px 20px 0px;
+
+}
+
+footer .copyright-social-media ul{
+
+    display: flex;
+    gap: 20px;
+    
+}
+
+footer .copyright-social-media ul li i{
+
+    color: var(--white);
+    border: 1px solid var(--white);
+    border-radius: 5px;
+    padding: 5px;
+    
+}
+
+
+
+footer .copyright-social-media p{
+
+    color: var(--white);
 }
