optimización del código

--- a/style.css
+++ b/style.css
@@ -632,6 +632,7 @@ footer .columns{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     /*background-color: var(--white);*/
 }
 
